<?xml version="1.0"?>
<package format="2">
  <name>the_explorer_robot</name>
  <version>0.0.0</version>
  <description>The explorer robot package</description>

  <!-- Maintainer tag -->
  <maintainer email="ajeet@umd.edu">Ajeet Wankhede</maintainer>


  <!-- License tag -->
  <license>MIT</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
 <author email="ajeet@umd.edu">Ajeet Wankhede</author>


  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rostest</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
